--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>new Year</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <section class="head">
@@ -16,5 +17,24 @@
             <button>Contact Us</button>
         </div>
     </section>
+    <section class="part2">
+        <div class="img2">
+            <img src="woman.png" alt="woman">
+        </div>
+        <div class="content2">
+            <h1>My failures of previous year</h1>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <div>
+                <ul>
+                    <li><span class="material-symbols-outlined">done</span>Contrary to popular belief, is not simply.</li>
+                    <li><span class="material-symbols-outlined">done</span> Contrary to popular belief.</li>
+                    <li><span class="material-symbols-outlined">done</span>Contrary to popular , is not simply.</li>
+                    <li><span class="material-symbols-outlined">done</span>Contrary to popular belief, is not simply.</li>
+                    <li> <span class="material-symbols-outlined">done</span>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
