add third sections

--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
             </div>
         </div>
     </section>
+    <section class="part3">
+        <div class="head3">
+            <h2>MY plan</h2>
+        </div>
+        <div class="main-ele">
+            <div>
+                <img src="web.jpg" alt="web">
+                <h4>web development</h4>
+                <p>here start web</p>
+            </div>
+            <div>
+                <img src="js.jpg" alt="js">
+                <h4>javascript</h4>
+                <p>start js world</p>
+            </div>
+            <div>
+                <img src="word.jpg" alt="wordpress">
+                <h4>wordpress</h4>
+                <p>world of worldpress</p>
+            </div>
+            <div>
+                <img src="php.jpg" alt="php">
+                <h4>php</h4>
+                <p>hyper text prepossesor</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
