add last section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
             </div>
         </div>
     </section>
+
+    <section class="section-4">
+        <div class="s4container">
+            <h2>Still Away | Never Give Up</h2>
+            <button>call me</button>
+        </div>
+    </section>
+    <script src="/script.js"></script>
     
 </body>
 </html>
